# starship

./: .all-contributorsrc  .codecov.yml  .dprint.json  .gitattributes  .gitignore  .gitpod.yml  .release-please-manifest.json  .rustfmt.toml  .starship-test.toml  AI_POLICY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.fr.md  README.ja.md  README.md  README.ru.md  SECURITY.md  Update PATH System Environment Variable to enable CMD to work  acceptance_test  azure-pipelines.yml  build.rs  clippy.toml  cobertura.xml  config-schema.json  countdown.py  crowdin.yml  deny.toml  flake.nix  integration_test  maskfile.md  package-lock.json  package.json  pixi.toml  pr_description.md  release-please-config.json  (+6 more)
.build/: install-rust.yml
.cargo/: audit.toml
.devenv/: profile
.github/: FUNDING.yml  PR_template.md  PULL_REQUEST_TEMPLATE.md  config-schema.json  dependabot.yml  renovate.json5  stale.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md  config.yml
.github/chglog/: CHANGELOG.tpl.md  RELEASE.tpl.md  changelog.yml  release.yml
.github/workflows/: apple-notarize.yml  auto-merge.yml  context.yml  continuous-integration.yml  crowdin-pretranslate.yml  deploy-build.yml  deploy.yml  format-workflow.yml  generate-changelog.yml  install-script.yml  install.yml  merge-dependabot.yml  publish-docs.yml  release-please.yml  release.yml  security-audit.yml  security_audit.yml  spell-check.yml  test-ruby-install.yml  workflow.yml
adapters/: fish_prompt.fish  starship.zsh-theme
benches/: benchmarks.rs  load_config.rs  my_benchmark.rs
ci/: azure-build-test-image.yml  azure-install-rust.yml  azure-rustfmt.yml  azure-setup-test-env.yml  azure-test-docker.yml  azure-test-nightly.yml  azure-test-stable.yml  bump-brew-formula.yml  cargo-check.yml  cargo-clippy.yml  cargo-cross.yml  cargo-publish.yml  github-release.yml  install-cross-rust.yml  install-rust.yml  rustfmt.yml  setup-test-env.yml  test.yml
crates/starship-cache/: Cargo.toml
crates/starship-cache/src/: errors.rs  lib.rs
crates/starship_cache/: Cargo.toml
crates/starship_cache/src/: errors.rs  lib.rs
crates/starship_module_config_derive/: LICENSE  README.md
docs/: INSTALL.md  README.md  book.toml  package-lock.json  package.json  power10.toml
docs/.vitepress/: config.mts
docs/.vuepress/: config.js  config.ts  public
docs/advanced-config/: README.md
docs/ar-SA/: README.md
docs/bn-BD/: README.md
docs/book/: .nojekyll  ayu-highlight.css  book.js  configuration.html  highlight.css  highlight.js  home.html  index.html  print.html  searcher.js  searchindex.js  searchindex.json  usage.html
docs/ckb-IR/: README.md
docs/config/: README.md
docs/configuration/: README.md
docs/de-DE/: README.md
docs/es-ES/: README.md
docs/faq/: README.md
docs/fr-FR/: README.md
docs/gallery/: README.md
docs/id-ID/: README.md
docs/installing/: README.md
docs/it-IT/: README.md
docs/ja/: README.md
docs/ja-JP/: README.md
docs/ko-KR/: README.md
docs/migrating-to-0.45.0/: README.md
docs/nl-NL/: README.md
docs/no-NO/: README.md
docs/pl-PL/: README.md
docs/presets/: 4-palette-powerline.md  DevMode.md  README.md  amin-themes.md  bracketed-segments.md  bubble-tea.md  catppuccin-macchiato.md  catppuccin-powerline.md  catppuccin.md  catppuccin_powerline.md  cherry-blossom.md  companero-claudio.md  crimson-snow.md  deep-oceanic-next.md  earth-night.md  gruvbox-air.md  gruvbox-powerline.md  gruvbox-rainbow.md  gruvbox-sentence.md  jetpack.md  kanagawa.md  muted-moss.md  nerd-font.md  no-empty-icons.md  no-nerd-font.md  no-runtimes.md  nord-dark.md  nord.md  oceanic-next.md  one-dark.md  onedark-powerline.md  owo.md  palette-powerline.md  parrot-os.md  pastel-powerline-reloaded.md  pastel-powerline.md  pastel-rainbow.md  pill.md  plain-text.md  power10.md  (+7 more)
docs/pt-BR/: README.md
docs/pt-PT/: README.md
docs/public/: config-schema.json  demo.webm  install.sh
docs/ru-RU/: README.md
docs/src/: SUMMARY.md  configuration.md  home.md  usage.md
docs/tr-TR/: README.md
docs/uk-UA/: README.md
docs/vi-VN/: README.md
docs/zh/: README.md
docs/zh-CN/: README.md
docs/zh-TW/: README.md
install/: install.sh
install/macos_packages/: aarch64.plist  build_and_notarize.sh  build_component_package.sh  build_distribution_package.sh  common.sh  readme.md  x86_64.plist
install/snap/: fix-snap-broken-after-refresh.patch
install/windows/: build_msi.ps1  main.wxs
media/: Fantastical_3.0.3.zip.REMOVED.git-id  logo.ai
scripts/: starship_migrate_0_40.rs
src/: bug_report.rs  char.rs  check.rs  conditional_style.rs  config.rs  configure.rs  context.rs  context_env.rs  find_file.rs  init.rs  lib.rs  logger.rs  main.rs  messages.rs  mocks.rs  module.rs  opt.rs  print.rs  segment.rs  serde_utils.rs  utils.rs
src/configs/: ansible.rs  aspire.rs  aws.rs  azure.rs  azurerm.rs  battery.rs  blank_fill.rs  buf.rs  bun.rs  c.rs  cc.rs  character.rs  chef.rs  claude_context.rs  claude_cost.rs  claude_model.rs  claude_usage.rs  clojure.rs  cmake.rs  cmd_duration.rs  cobol.rs  conda.rs  container.rs  cpp.rs  crystal.rs  cuda.rs  custom.rs  daml.rs  dart.rs  dbt.rs  deno.rs  devbox_shell.rs  directory.rs  direnv.rs  disk_usage.rs  (+155 more)
starship/: Cargo.toml
starship/src/: config.rs  context.rs  lib.rs  main.rs  module.rs  module_config.rs  print.rs
starship/src/configs/: aws.rs  battery.rs  character.rs  cmd_duration.rs  directory.rs  docker.rs  hostname.rs  jobs.rs  mod.rs  rust.rs
starship/src/init/: mod.rs  starship.bash  starship.ps1  starship.zsh
starship/src/modules/: battery.rs  cmd_duration.rs  directory.rs  docker.rs  dotnet.rs  env_var.rs  hostname.rs  jobs.rs  kubernetes.rs  line_break.rs  mod.rs  rust.rs  time.rs
starship_module_config_derive/: .gitignore  Cargo.toml
starship_module_config_derive/src/: lib.rs
tests/: Dockerfile  character.rs  common.rs  directory.rs  full_prompt.rs  go.rs  line_break.rs  nodejs.rs  python.rs  rust.rs  test_invariant_Cargo.py
translations/: README.de.md  README.fr.md  README.ja.md  README.ru.md
(+945 files in other folders)
