[package]
name = "starship"
version = "1.23.0"
authors = ["Starship Contributors"]
build = "build.rs"
categories = ["command-line-utilities"]
documentation = "https://starship.rs/guide/"
edition = "2024"
homepage = "https://starship.rs"
# Keep `/` in front of `README.md` to exclude localized readmes
include = [
  "src/**/*",
  "/starship.exe.manifest",
  "media/icon.ico",
  "build.rs",
  "LICENSE",
  "/README.md",
  "docs/public/presets/toml/",
  ".github/config-schema.json",
]
keywords = ["prompt", "shell", "bash", "fish", "zsh"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/starship/starship"
# Note: MSRV is only intended as a hint, and only the latest version is officially supported in starship.
rust-version = "1.85"
description = """
The minimal, blazing-fast, and infinitely customizable prompt for any shell! ☄🌌️
"""

[features]
default = ["battery", "notify"]
battery = ["starship-battery"]
config-schema = ["schemars"]
notify = ["notify-rust"]

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std", "wasmbind"] }
clap = { version = "4.5.38", features = ["derive", "cargo", "unicode"] }
clap_complete = "4.5.50"
clap_complete_nushell = "4.5.5"
dirs = "6.0.0"
dunce = "1.0.5"
# default feature restriction addresses https://github.com/starship/starship/issues/4251
gix = { version = "0.72.1", default-features = false, features = ["max-performance-safe", "revision", "zlib-rs", "status"] }
indexmap = { version = "2.9.0", features = ["serde"] }
jsonc-parser = { version = "0.26.2", features = ["serde"] }
log = { version = "0.4.27", features = ["std"] }
# notify-rust is optional (on by default) because the crate doesn't currently build for darwin with nix
# see: https://github.com/NixOS/nixpkgs/issues/160876
notify-rust = { version = "4.11.7", optional = true }
nu-ansi-term = "0.50.1"
open = "5.3.2"
# update os module config and tests when upgrading os_info
os_info = "3.11.0"
# for efficient shared state between `git_status` and `git_metrics`, allowing parallel printing. This is for poison-free locks.
parking_lot = "0.12.3"
path-slash = "0.2.1"
pest = "2.8.0"
pest_derive = "2.8.0"
process_control = "5.1.0"
quick-xml = "0.37.5"
rand = "0.9.1"
rayon = "1.10.0"
regex = { version = "1.11.1", default-features = false, features = ["perf", "std", "unicode-perl"] }
rust-ini = "0.21.1"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
shadow-rs = { version = "1.1.1", default-features = false, features = ["build"] }
# battery is optional (on by default) because the crate doesn't currently build for Termux
# see: https://github.com/svartalf/rust-battery/issues/33
starship-battery = { version = "0.10.1", optional = true }
strsim = "0.11.1"
systemstat = "=0.2.4"
terminal_size = "0.4.2"
toml = { version = "0.8.22", features = ["preserve_order"] }
toml_edit = "0.22.26"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
urlencoding = "2.1.3"
versions = "7.0.0"
which = "7.0.3"
whoami = { version = "1.6.0", default-features = false }
yaml-rust2 = "0.10.2"

guess_host_triple = "0.1.4"
home = "0.5.11"
shell-words = "1.1.0"

[dependencies.schemars]
version = "0.8.22"
optional = true
features = ["preserve_order", "indexmap2"]

[target.'cfg(windows)'.dependencies]
deelevate = "0.2.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
]

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.29.0", default-features = false, features = ["feature", "fs", "user"] }

[build-dependencies]
shadow-rs = { version = "1.1.1", default-features = false, features = ["build"] }
dunce = "1.0.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.20.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.bench]
codegen-units = 16
lto = "thin"
strip = false

[[bin]]
name = "starship"
path = "src/main.rs"
