[package]
name = "starship"
version = "0.20.0"
edition = "2018"
authors = ["Matan Kushner <hello@matchai.me>"]
homepage = "https://starship.rs"
documentation = "https://starship.rs/guide/"
repository = "https://github.com/starship/starship"
readme = "README.md"
license = "ISC"
keywords = ["prompt", "shell", "bash", "fish", "zsh"]
categories = ["command-line-utilities"]
description = """
The cross-shell prompt for astronauts. ☄🌌️
"""
exclude = ["docs/**/*"]

[badges]
azure-devops = { project = "starship-control/starship", pipeline = "Starship Test Suite" }
is-it-maintained-issue-resolution = { repository = "starship/starship" }
is-it-maintained-open-issues = { repository = "starship/starship" }
maintenance = { status = "actively-developed" }

[features]
default = ["battery"]

[dependencies]
clap = "2.33.0"
ansi_term = "0.12.1"
dirs = "2.0.2"
git2 = { version = "0.10.1", default-features = false, features = [] }
toml = "0.5.3"
serde_json = "1.0.40"
rayon = "1.2.0"
pretty_env_logger = "0.3.1"
log = "0.4.8"
# battery is optional (on by default) because the crate doesn't currently build for Termux
# see: https://github.com/svartalf/rust-battery/issues/33
battery = { version = "0.7.4", optional = true }
path-slash = "0.1.1"
unicode-segmentation = "1.3.0"
gethostname = "0.2.0"
once_cell = "1.2.0"
chrono = "0.4"
sysinfo = "0.9.5"
byte-unit = "3.0.3"
starship_module_config_derive = { version = "0.20", path = "../starship_module_config_derive" }
yaml-rust = "0.4"

[dev-dependencies]
tempfile = "3.1.0"

[[bin]]
name = "starship"
path = "src/main.rs"
