[package]
name = "starship_module_config_derive"
version = "0.2.1"
authors = ["Matan Kushner <hello@matchai.me>"]
categories = ["command-line-utilities"]
documentation = "https://starship.rs/guide/"
edition = "2021"
homepage = "https://starship.rs"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["prompt", "shell", "bash", "fish", "zsh"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/starship/starship"
description = """
The minimal, blazing-fast, and infinitely customizable prompt for any shell! ☄🌌️
"""

[lib]
name = "starship_module_config_derive"
proc-macro = true

[dependencies]
proc-macro2 = "~1"
quote = "~1"
syn = "~1"
